save data files for parallel circuit timings

--- a/twoCircuitLBMParallel.ipynb
+++ b/twoCircuitLBMParallel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "d347141b",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "31906c22",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "11de97d3",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d2b2aa71",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "fbba4e44",
    "metadata": {},
    "outputs": [],
@@ -384,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "bf194804",
+   "execution_count": 34,
+   "id": "79642bc7",
    "metadata": {},
    "outputs": [
     {
@@ -395,59 +395,179 @@
       "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
       "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n"
      ]
     }
    ],
    "source": [
-    "nshots = 100_000\n",
+    "# get timings\n",
+    "low_pow = 5\n",
+    "upper_pow = 9\n",
     "\n",
-    "sCirc = streamCirc()\n",
-    "stream_physical_qubits = [i for i in range(0, sCirc.num_qubits)]\n",
-    "exp1 = CustomExperiment(sCirc, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits, num_samples=nshots)\n",
+    "nsamples = 5\n",
     "\n",
-    "base = len(stream_physical_qubits)\n",
+    "out = {}\n",
+    "results = {}\n",
     "\n",
-    "vCirc = vortCirc(streamfunction)\n",
-    "vorticity_physical_qubits = [i for i in range(base, base + vCirc.num_qubits)]\n",
-    "exp2 = CustomExperiment(vCirc, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits, num_samples=nshots)\n",
+    "for i in range(low_pow, upper_pow + 1):\n",
+    "    timings = []\n",
+    "    nshots = 10**i\n",
+    "    for j in range(nsamples):\n",
+    "        sCirc = streamCirc()\n",
+    "        stream_physical_qubits = [i for i in range(0, sCirc.num_qubits)]\n",
+    "        exp1 = CustomExperiment(sCirc, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits, num_samples=nshots)\n",
     "\n",
-    "experiments = [exp1, exp2]\n",
-    "parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())\n",
-    "ideal = parallel_exp.run().block_for_results()"
+    "        base = len(stream_physical_qubits)\n",
+    "\n",
+    "        vCirc = vortCirc(streamfunction)\n",
+    "        vorticity_physical_qubits = [i for i in range(base, base + vCirc.num_qubits)]\n",
+    "        exp2 = CustomExperiment(vCirc, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits, num_samples=nshots)\n",
+    "\n",
+    "        experiments = [exp1, exp2]\n",
+    "        parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())\n",
+    "        ideal = parallel_exp.run().block_for_results()\n",
+    "\n",
+    "        start = ideal.start_datetime\n",
+    "        end = ideal.end_datetime\n",
+    "        delta = end - start\n",
+    "        delta = delta.seconds + 10**(-6) * delta.microseconds\n",
+    "\n",
+    "        timings.append(delta)\n",
+    "        experiments.append(ideal)\n",
+    "    out[i] = timings\n",
+    "    results[i] = experiments\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "64475520",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5: [462.009916, 450.96758, 918.387323, 441.831242, 456.984834],\n",
+       " 6: [460.288996, 442.61371, 439.689297, 446.951353, 457.695466],\n",
+       " 7: [462.21205, 470.61491, 482.72401, 451.090576, 450.665836],\n",
+       " 8: [459.36413, 475.093714, 1010.984359, 446.693873, 466.141416],\n",
+       " 9: [1001.48137, 1182.516968, 452.220452, 444.760328, 217.221571]}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "16bc1af1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle as pkl\n",
     "\n",
-    "with open(\"data/twoCircuitParallel.pkl\", \"wb\") as f:\n",
-    "    pkl.dump(ideal, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "bdea52ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: save files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "93a34c30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: post-processing"
+    "with open(\"data/TEMP.pkl\", \"wb\") as f:\n",
+    "    pkl.dump(out, f)"
    ]
   }
  ],
