--- a/TwoCircuitLBMParallelBounds.ipynb
+++ b/TwoCircuitLBMParallelBounds.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d347141b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import qiskit as q\n",
-    "from qiskit import QuantumCircuit, transpile, assemble, Aer, IBMQ, QuantumRegister, AncillaRegister\n",
+    "from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister\n",
     "from qiskit.quantum_info.operators import Operator\n",
     "from qiskit.quantum_info import Statevector\n",
     "from qiskit.visualization import array_to_latex\n",
@@ -17,13 +17,19 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D  \n",
     "import matplotlib.cm as cm\n",
+    "from qiskit.circuit.library import Diagonal\n",
     "import qiskit.circuit.library as qlib\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "from qiskit import transpile\n",
+    "\n",
+    "from qiskit_aer import AerSimulator\n",
+    "\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "28667bd2",
    "metadata": {},
    "outputs": [],
@@ -41,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d40d1409",
    "metadata": {},
    "outputs": [],
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ef1d969d",
    "metadata": {},
    "outputs": [],
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8299c09f",
    "metadata": {},
    "outputs": [],
@@ -125,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "818ae260",
    "metadata": {},
    "outputs": [],
@@ -153,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8ddb8ade",
    "metadata": {
     "scrolled": false
@@ -163,8 +169,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/1403328007.py:49: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n"
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
      ]
     },
     {
@@ -444,7 +456,7 @@
        "«                   ░       ░       "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +510,8 @@
     "\n",
     "    B = QuantumCircuit(QuantumRegister(9))\n",
     "    B1d, B2d = createADiag()\n",
-    "    B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n",
+    "    B = Diagonal(list(np.concatenate((B1d,B2d))))\n",
+    "    # B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n",
     "    B = B.to_gate(label='B')\n",
     "\n",
     "    setup.append(B,[q[0],q[1],q[2],q[3],q[4],q[5],q[6],q[7],q[8]])\n",
@@ -518,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "863e64b6",
    "metadata": {},
    "outputs": [],
@@ -554,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "b5bf637d",
    "metadata": {},
    "outputs": [
@@ -562,14 +575,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:23: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  Col.diagonal(list(np.concatenate((B1_diag,B2_diag))),qubit = [0,1,2,3,4,5,6,7,8,9,10,11])\n",
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:29: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  Col1.diagonal(list(B1_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:33: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  Col2.diagonal(list(B2_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:63: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n"
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
      ]
     },
     {
@@ -687,7 +696,7 @@
        "«       ░        ░                        "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,27 +715,32 @@
     "\n",
     "#     setup.append(h1,[11,13])\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    uvel,vvel = uv(stream)\n",
     "    A_diag = collision_f(uvel,vvel)\n",
     "    zeros = np.zeros(M*M)\n",
     "    A_diag = np.concatenate((A_diag, zeros, zeros, zeros))\n",
     "    B1_diag = top_half(A_diag)\n",
     "    B2_diag = bottom_half(A_diag)\n",
-    "    Col = QuantumCircuit(QuantumRegister(12))\n",
-    "    Col.diagonal(list(np.concatenate((B1_diag,B2_diag))),qubit = [0,1,2,3,4,5,6,7,8,9,10,11])\n",
-    "    Col = Col.to_gate(label='B')\n",
+    "    \n",
+    "    # Col = QuantumCircuit(QuantumRegister(12))\n",
+    "    # Col.diagonal(list(np.concatenate((B1_diag,B2_diag))),qubit = [0,1,2,3,4,5,6,7,8,9,10,11])\n",
+    "    # Col = Col.to_gate(label='B')\n",
+    "    Col_diag = Diagonal(list(np.concatenate((B1_diag,B2_diag))))\n",
+    "    Col = Col_diag.to_gate(label='B')\n",
     "\n",
     "    setup.append(h1,[11,12])\n",
     "    \n",
-    "    Col1 = QuantumCircuit(QuantumRegister(11))\n",
-    "    Col1.diagonal(list(B1_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
-    "    Col1 = Col1.to_gate(label='c1')\n",
+    "    # Col1 = QuantumCircuit(QuantumRegister(11))\n",
+    "    # Col1.diagonal(list(B1_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
+    "    # Col1 = Col1.to_gate(label='c1')\n",
+    "    Col1_diag = Diagonal(list(B1_diag))\n",
+    "    Col1 = Col1_diag.to_gate(label='c1')\n",
     "    \n",
-    "    Col2 = QuantumCircuit(QuantumRegister(11))\n",
-    "    Col2.diagonal(list(B2_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
-    "    Col2 = Col2.to_gate(label='c2')\n",
+    "    # Col2 = QuantumCircuit(QuantumRegister(11))\n",
+    "    # Col2.diagonal(list(B2_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
+    "    # Col2 = Col2.to_gate(label='c2')\n",
+    "    Col2_diag = Diagonal(list(B2_diag))\n",
+    "    Col2 = Col2_diag.to_gate(label='c2')\n",
     "    \n",
     "    setup.append(Col1.control(2,ctrl_state = '00'),[12,11,0,1,2,3,4,5,6,7,8,9,10])\n",
     "    setup.append(Col2.control(2,ctrl_state = '01'),[12,11,0,1,2,3,4,5,6,7,8,9,10])\n",
@@ -755,7 +769,8 @@
     "\n",
     "    B = QuantumCircuit(QuantumRegister(9))\n",
     "    B1d, B2d = createADiag()\n",
-    "    B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n",
+    "    B = Diagonal(list(np.concatenate((B1d,B2d))))\n",
+    "    # B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n",
     "    B = B.to_gate(label='B')\n",
     "\n",
     "    setup.append(B.control(1,ctrl_state = 0),[11,q[0],q[1],q[2],q[3],q[4],q[5],q[6],q[7],q[8]])\n",
@@ -776,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "a0417529",
    "metadata": {},
    "outputs": [],
@@ -793,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "31906c22",
    "metadata": {},
    "outputs": [],
@@ -826,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "5eb86621",
    "metadata": {},
    "outputs": [],
@@ -842,32 +857,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "6d2ff040",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/1403328007.py:49: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n",
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:23: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  Col.diagonal(list(np.concatenate((B1_diag,B2_diag))),qubit = [0,1,2,3,4,5,6,7,8,9,10,11])\n",
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:29: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  Col1.diagonal(list(B1_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:33: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  Col2.diagonal(list(B2_diag),qubit = [0,1,2,3,4,5,6,7,8,9,10])\n",
-      "/var/folders/f0/g9bnvrbs7t15psm7b2d81gnm0000gn/T/ipykernel_34796/3091936068.py:63: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.diagonal()`` is deprecated as of qiskit 0.46.0. It will be removed in the 1.0.0 release. Instead, compose the circuit with a qiskit.circuit.library.Diagonal circuit.\n",
-      "  B.diagonal(list(np.concatenate((B1d,B2d))), qubit=[0,1,2,3,4,5,6,7,8])\n"
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/melod/anaconda3/envs/qiskit1/lib/python3.12/site-packages/numpy/linalg/_linalg.py:2432: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
      ]
     }
    ],
    "source": [
-    "steps = 91\n",
-    "for i in range(steps):\n",
+    "steps = 10\n",
+    "for i in range(steps + 1):\n",
+    "    print(i)\n",
     "    streamfunction, vorticity = allstreams[-1], allvorts[-1]\n",
     "    x = Stimestep(streamfunction,vorticity)\n",
     "    y = Vtimestep(vorticity, streamfunction)\n",
@@ -1326,7 +1359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qiskit0_49",
+   "display_name": "qiskit1",
    "language": "python",
    "name": "python3"
   },
