add timing code for custom one circuit" "

--- a/twoCircuitLBMParallel.ipynb
+++ b/twoCircuitLBMParallel.ipynb
@@ -536,39 +536,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "64475520",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{5: [462.009916, 450.96758, 918.387323, 441.831242, 456.984834],\n",
-       " 6: [460.288996, 442.61371, 439.689297, 446.951353, 457.695466],\n",
-       " 7: [462.21205, 470.61491, 482.72401, 451.090576, 450.665836],\n",
-       " 8: [459.36413, 475.093714, 1010.984359, 446.693873, 466.141416],\n",
-       " 9: [1001.48137, 1182.516968, 452.220452, 444.760328, 217.221571]}"
+       "{5: [<CustomExperiment.CustomExperiment at 0x1608b7590>,\n",
+       "  <CustomExperiment.CustomExperiment at 0x15ee6a210>,\n",
+       "  ExperimentData(ParallelExperiment, 46227462-7618-4985-a70e-2089067d134d, job_ids=['a7b66018-ae0d-4be9-931e-ab320a1fb914'], metadata=<5 items>)],\n",
+       " 6: [<CustomExperiment.CustomExperiment at 0x15ec85f10>,\n",
+       "  <CustomExperiment.CustomExperiment at 0x15c01c890>,\n",
+       "  ExperimentData(ParallelExperiment, 4e3a20cc-330a-4b46-bf37-4ee9c28d917a, job_ids=['e69d86d4-8de2-4e5d-88a0-83ce7150c743'], metadata=<5 items>)],\n",
+       " 7: [<CustomExperiment.CustomExperiment at 0x164de39e0>,\n",
+       "  <CustomExperiment.CustomExperiment at 0x160b9d880>,\n",
+       "  ExperimentData(ParallelExperiment, 5b808620-569c-4db8-ae2a-fb9bb335218e, job_ids=['5ab4216f-fabc-4c52-95d5-7c57a92ffcfa'], metadata=<5 items>)],\n",
+       " 8: [<CustomExperiment.CustomExperiment at 0x160a72360>,\n",
+       "  <CustomExperiment.CustomExperiment at 0x15baf4530>,\n",
+       "  ExperimentData(ParallelExperiment, 1fbf1221-348e-4e5b-8714-0b1fa29ffc5d, job_ids=['ef43284a-99a3-47a8-ba04-d1c8deb2197b'], metadata=<5 items>)],\n",
+       " 9: [<CustomExperiment.CustomExperiment at 0x166561760>,\n",
+       "  <CustomExperiment.CustomExperiment at 0x1664bb9e0>,\n",
+       "  ExperimentData(ParallelExperiment, 87b5b8ad-d4bb-401c-8e91-e1d303198005, job_ids=['af10a42c-b436-49cd-a6cd-feed5529c3e0'], metadata=<5 items>)]}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "results"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "id": "16bc1af1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle as pkl\n",
     "\n",
-    "with open(\"data/TEMP.pkl\", \"wb\") as f:\n",
-    "    pkl.dump(out, f)"
+    "with open(\"data/twoCircuitParallelResults.pkl\", \"wb\") as f:\n",
+    "    pkl.dump(results, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba0cc8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
